# bitcoinz

./: .dockerignore  .gitignore  COPYING  Dockerfile  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  cross_compiling_bitcoinz_for_win_using_mingw32-w64.txt  responsible_disclosure.md
.cargo/: config.toml.in
doc/: Doxyfile  (+20 more)
src/: Makefile.am  Makefile.bench.include  Makefile.gtest.include  Makefile.leveldb.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bloom.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  core_memusage.h  core_write.cpp  dbwrapper.cpp  dbwrapper.h  deprecation.cpp  deprecation.h  (+85 more)
src/amqp/: amqppublishnotifier.cpp  amqppublishnotifier.h
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  checkqueue.cpp  perf.h  rollingbloom.cpp  verification.cpp
src/consensus/: funding.cpp  funding.h  merkle.cpp  params.cpp  params.h  upgrades.cpp  upgrades.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  equihash.cpp  equihash.h
src/crypto/ctaes/: ctaes.c
src/fuzzing/DecodeHexTx/input/: coinbase.txt  manyoutputs.txt  sapling.txt  sprout.txt
src/gtest/: main.cpp  test_checkblock.cpp  test_checktransaction.cpp  test_consensus.cpp  test_deprecation.cpp  test_dynamicusage.cpp  test_foundersreward.cpp  test_joinsplit.cpp  test_keys.cpp  test_keystore.cpp  test_mempool.cpp  test_mempoollimit.cpp  test_merkletree.cpp  test_metrics.cpp  test_noteencryption.cpp  test_paymentdisclosure.cpp  test_pow.cpp  test_rpc.cpp  test_sapling_note.cpp  test_transaction_builder.cpp  test_txid.cpp  test_upgrades.cpp  test_validation.cpp
src/leveldb/: build_detect_platform
src/leveldb/db/: version_set.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/pow/tromp/: equi.h  equi_miner.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/rust/: .gitlab-ci.yml
src/rust/bellman/src/groth16/: mod.rs  prover.rs
src/rust/bellman/src/groth16/tests/: dummy_engine.rs
src/rust/bellman/tests/: mimc.rs
src/rust/pairing/: Cargo.toml
src/rust/pairing/src/: lib.rs
src/rust/sapling-crypto/: Cargo.toml
src/rust/sapling-crypto/src/: pedersen_hash.rs
src/rust/sapling-crypto/src/circuit/: num.rs
src/rust/sapling-crypto/src/circuit/sapling/: mod.rs
src/rust/sapling-crypto/src/circuit/test/: mod.rs
src/rust/sapling-crypto/src/primitives/: mod.rs
src/rustzcash/: .gitignore  Cargo.toml  README.md
src/rustzcash/src/: rustzcash.rs
src/script/: interpreter.cpp  ismine.cpp  script.cpp  script.h  sigcache.cpp  sigcache.h  sign.cpp  standard.cpp  standard.h
src/secp256k1/: CMakePresets.json
src/secp256k1/build-aux/m4/: bitcoin_secp.m4
src/secp256k1/ci/: linux-debian.Dockerfile
src/secp256k1/cmake/: source_arm32.s
src/secp256k1/src/: bench.h
src/snark/: Makefile
src/snark/libsnark/algebra/evaluation_domain/: evaluation_domain.tcc
src/snark/libsnark/algebra/exponentiation/: exponentiation.hpp  exponentiation.tcc
src/snark/libsnark/algebra/fields/: bigint.hpp  bigint.tcc  field_utils.hpp  field_utils.tcc  fp.hpp  fp.tcc  fp12_2over3over2.hpp  fp12_2over3over2.tcc  fp2.hpp  fp2.tcc  fp6_3over2.hpp  fp6_3over2.tcc
src/snark/libsnark/algebra/scalar_multiplication/: multiexp.tcc  wnaf.hpp  wnaf.tcc
src/snark/libsnark/common/: profiling.cpp  profiling.hpp  utils.cpp  utils.hpp
src/snark/libsnark/common/data_structures/: merkle_tree.tcc  sparse_vector.hpp  sparse_vector.tcc
src/snark/libsnark/gadgetlib1/: pb_variable.hpp  pb_variable.tcc
src/snark/libsnark/gadgetlib1/gadgets/: basic_gadgets.tcc
src/snark/libsnark/relations/: variable.hpp
src/support/: pagelocker.cpp
src/test/: DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  scheduler_tests.cpp  script_standard_tests.cpp  script_tests.cpp  scriptnum10.h  scriptnum_tests.cpp  sighash_tests.cpp  test_bitcoin.cpp  test_bitcoin.h  test_random.h  transaction_tests.cpp  txvalidationcache_tests.cpp  (+1 more)
src/test/data/: alertTests.raw  bitcoin-util-test.json  tx_invalid.json
src/univalue/test/: unitester.cpp
src/wallet/: asyncrpcoperation_common.cpp  asyncrpcoperation_common.h  asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_mergetoaddress.h  asyncrpcoperation_saplingmigration.cpp  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  crypter.cpp  crypter.h  db.cpp  db.h  paymentdisclosure.cpp  paymentdisclosure.h  paymentdisclosuredb.h  rpcdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  walletdb.cpp  walletdb.h
src/wallet/gtest/: test_paymentdisclosure.cpp  test_wallet.cpp  test_wallet_zkeys.cpp
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zcash/: Address.cpp  Address.hpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.cpp  Proof.hpp
src/zcash/address/: sapling.cpp  sapling.hpp  zip32.cpp  zip32.h
src/zcash/circuit/: utils.tcc
src/zmq/: zmqnotificationinterface.cpp  zmqpublishnotifier.cpp
(+214 files in other folders)
